syntax = "proto3";

package token_service;


service Token {
    rpc Create(CreateRequest) returns (CreateResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc IsAuthend(IsAuthedRequest) returns (IsAuthedResponse) {} 

    
    rpc IssueUserToken(IssueUserTokenRequest) returns (IssueUserTokenResponse) {}
    rpc VerifyUserToken(VerifyUserTokenRequest) returns (VerifyUserTokenResponse) {}

    rpc IssueAppToken(IssueAppTokenRequest) returns (IssueAppTokenResponse) {}
    rpc VerifyAppToken(VerifyAppTokenRequest) returns (VerifyAppTokenResponse) {}


}

message CreateRequest {
    string tracing_ID = 1;
    string username = 2;
    string password = 3;
    string organisation = 4;
}
message CreateResponse {
    int32 status_code = 1;
    string msg = 2;
}

message LoginRequest {
    string tracing_ID = 1;
    string username = 2; 
    string password = 3;
}
message LoginResponse {
    int32 status_code = 1;
    string msg = 2;
    string jwt = 3;
}

message IsAuthedRequest {
    string tracing_ID = 1;
    string jwt = 2;
}
message IsAuthedResponse {
    int32 status_code = 1;
    string msg = 2;
    bool is_authed = 3;
}

// RPC VERIFY APP TOKEN
message VerifyAppTokenRequest {
    string tracing_ID = 1;
    string token = 2;
}

message VerifyAppTokenResponse {
    int32 status_code = 1;
    string msg = 2;
    AppClaims app_claims = 3;
}

// RPC ISSUE APP TOKEN
message IssueAppTokenRequest {
    string tracing_ID = 1;
    string orgnAndAppHash = 2;
    string app_uuid = 3;
    string origin = 4;
}

message IssueAppTokenResponse {
    int32 status_code = 1;
    string msg = 2;
    string app_token = 3;
}

// RPC ISSUE USER TOKEN
message IssueUserTokenRequest {
    string tracing_ID = 1;
    UserClaim claim = 2;
}
message IssueUserTokenResponse {
    int32 status_code = 1;
    string msg = 2; 
    string user_token = 3;
}
// ***************************

// RPC ISSUE USER TOKEN
message VerifyUserTokenRequest {
    string tracing_ID = 1;
    string user_token = 2;
}
message VerifyUserTokenResponse {
    int32 status_code = 1;
    string msg = 2;
    UserClaim claim = 3;
}
// ***************************


// common types
message UserClaim {
    string uuid = 1;
    string orgn_domain = 2;
}

message AppClaims {
    string app_uuid = 1;
    string orgnAndAppHash = 2;
    string domain = 3;

}